# wow-wm-project

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  build-bridge-lab.bat  build-wm.bat  clear-wow-item-cache.bat  configure-bridge-lab.bat  incremental-bridge-lab.bat  pyproject.toml  setup-bridge-lab.bat  setup-wm.bat  stage-bridge-lab-runtime.bat  start-bridge-lab-all.bat  start-bridge-lab-mysql.bat  start-bridge-lab-server.bat  stop-bridge-lab-mysql.bat  summon-bridge-lab-bonebound-alpha.bat  summon-bridge-lab-bonebound-twins.bat
bootstrap/: sources.lock.json
control/: registry.json
docs/: ACTIVE_WM_PLAYER_SCOPE.md  CHARACTER_EXCLUSIVITY_V1.md  CLEANUP_PLAYBOOK.md  CODEX_WORKING_RULES.md  CONTENT_CANDIDATES_V1.md  CONTENT_CANDIDATES_V2.md  CONTENT_CANDIDATES_V4.md  CONTENT_WORKBENCH_V1.md  CONTEXT_PACK_V1.md  CUSTOM_ID_LEDGER.md  DEPLOYMENT_WINDOWS.md  DEVELOPMENT_WORKFLOW.md  EVENT_WATCHER_ARCHITECTURE.md  EXPORT_FORMATS.md  HOWTO_CONVENTIONS.md  ITEM_SLOT_PIPELINE_V1.md  JOURNAL_LAYER_V1.md  MAINLINE_WORKFLOW_AND_OUTPUT_RULES.md  NEXT_CHAT_HANDOFF.md  ON_THE_FLY_SPELLS_V1.md  PHASE2_CONTEXTUAL_QUEST_GENERATION.md  PROMPT_DEMO_SEEDING.md  PROMPT_PACKAGE_V1.md  QUEST_DRAFT_PIPELINE_V1.md  QUEST_PUBLISH_PLAN_V1.md  README_OPERATIONS_INDEX.md  RESERVED_ID_STRATEGY.md  RESERVED_SLOT_MANAGER_V1.md  RESERVED_SLOT_MANAGER_V2.md  ROADMAP.md  SETUP_D_WOW_WM_PROJECT.md  SPELL_SHELL_BANK_V1.md  SPELL_SLOT_PIPELINE_V1.md  SUMMON_FAILURE_POSTMORTEM.md  SUMMON_SPELL_PLATFORM_STATUS.md  WINDOWS_DETACHED_WATCH_LAUNCH_POSTMORTEM.md  WM_PLATFORM_HANDOFF.md  (+4 more)
(+492 files in other folders)
